--- a/style.css
+++ b/style.css
@@ -1,23 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 body {
   justify-content: center;
   align-items: center;
   text-align: center;
-}
-
-p {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-h1 {
- font-family: Impact, Haettenschweiler, 'Arial Narrow  Bold', sans-serif;
-}
-
-h2 {
- font-family: cursive;
+  font-family: 'Poppins', sans-serif;
 }
 
 h3 {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: bold;
 }
 
