--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   text-align: center;
   font-family: 'Poppins', sans-serif;
-  margin: 0 10em;
+  padding: 0 10em;
 }
 
 h3 {
